--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <header id="page_header">
+    <header>
+        <h1 id="header">header</h1>
+        <p id="p_tag">practice</p>
+        <i id="i_tag">looking fancy eehh</i>
 
     </header>
 
